@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,11 +21,14 @@ import org.eclipse.jface.wizard.Wizard;
 import org.eclipse.swt.SWT;
 import org.eclipse.ui.IImportWizard;
 import org.eclipse.ui.IWorkbench;
+import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DatabaseURL;
 import org.jkiss.dbeaver.model.app.DBPDataSourceRegistry;
 import org.jkiss.dbeaver.model.connection.DBPConnectionConfiguration;
+import org.jkiss.dbeaver.model.connection.DBPDriver;
 import org.jkiss.dbeaver.model.connection.DBPDriverConfigurationType;
 import org.jkiss.dbeaver.model.connection.DBPDriverLibrary;
 import org.jkiss.dbeaver.model.exec.DBCException;
@@ -37,19 +40,22 @@ import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.ui.UIUtils;
 import org.jkiss.dbeaver.ui.config.migration.ImportConfigMessages;
 import org.jkiss.dbeaver.ui.navigator.NavigatorUtils;
+import org.jkiss.dbeaver.utils.DataSourceUtils;
 import org.jkiss.utils.CommonUtils;
 
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public abstract class ConfigImportWizard extends Wizard implements IImportWizard {
     private static final Log log = Log.getLog(ConfigImportWizard.class);
     
     private ConfigImportWizardPage mainPage;
-    private Map<String, DriverDescriptor> driverClassMap = new HashMap<>();
+    private final Map<String, DBPDriver> driverClassMap = new HashMap<>();
 
     public ConfigImportWizard() {
 		super();
@@ -107,16 +113,16 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
             throw new DBException("Cannot create driver '" + driverInfo.getName() + "' - no connection URL pattern specified");
         }
         {
-            DriverDescriptor driver = driverClassMap.get(driverInfo.getDriverClass());
+            DBPDriver driver = driverClassMap.get(driverInfo.getDriverClass());
             if (driver != null) {
                 connectionInfo.setDriver(driver);
                 return true;
             }
         }
         final DataSourceProviderRegistry registry = DataSourceProviderRegistry.getInstance();
-        List<DriverDescriptor> matchedDrivers = new ArrayList<>();
+        List<DBPDriver> matchedDrivers = new ArrayList<>();
         for (DataSourceProviderDescriptor dataSourceProvider : registry.getDataSourceProviders()) {
-            for (DriverDescriptor driver : dataSourceProvider.getEnabledDrivers()) {
+            for (DBPDriver driver : dataSourceProvider.getEnabledDrivers()) {
                 final String driverClassName = driver.getDriverClassName();
                 if (driverClassName != null && driverClassName.equals(driverInfo.getDriverClass())) {
                     matchedDrivers.add(driver);
@@ -124,7 +130,7 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
             }
         }
 
-        DriverDescriptor driver;
+        DBPDriver driver;
         if (matchedDrivers.isEmpty()) {
             // Create new driver
             final DataSourceProviderDescriptor genericProvider = registry.getDataSourceProvider("generic");
@@ -132,28 +138,29 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
                 throw new DBException("Generic datasource provider not found");
             }
 
-            driver = genericProvider.createDriver();
-            driver.setName(driverInfo.getName());
-            driver.setDriverClassName(driverInfo.getDriverClass());
-            driver.setSampleURL(driverInfo.getSampleURL());
-            driver.setConnectionProperties(driverInfo.getProperties());
-            driver.setDescription(driverInfo.getDescription());
-            driver.setDriverDefaultPort(driverInfo.getDefaultPort());
-            driver.setDriverDefaultDatabase(driverInfo.getDefaultDatabase());
-            driver.setDriverDefaultServer(driverInfo.getDefaultServer());
-            driver.setDriverDefaultUser(driverInfo.getDefaultUser());
+            DriverDescriptor newDriver = genericProvider.createDriver();
+            newDriver.setName(driverInfo.getName());
+            newDriver.setDriverClassName(driverInfo.getDriverClass(), true);
+            newDriver.setSampleURL(driverInfo.getSampleURL());
+            newDriver.setConnectionProperties(driverInfo.getProperties());
+            newDriver.setDescription(driverInfo.getDescription());
+            newDriver.setDriverDefaultPort(driverInfo.getDefaultPort());
+            newDriver.setDriverDefaultDatabase(driverInfo.getDefaultDatabase());
+            newDriver.setDriverDefaultServer(driverInfo.getDefaultServer());
+            newDriver.setDriverDefaultUser(driverInfo.getDefaultUser());
             for (String path : driverInfo.getLibraries()) {
-                driver.addDriverLibrary(path, DBPDriverLibrary.FileType.jar);
+                newDriver.addDriverLibrary(path, DBPDriverLibrary.FileType.jar);
             }
-            driver.setModified(true);
-            genericProvider.addDriver(driver);
-            connectionInfo.setDriver(driver);
+            newDriver.setModified(true);
+            genericProvider.addDriver(newDriver);
+            connectionInfo.setDriver(newDriver);
+            driver = newDriver;
         } else {
             // Use the only found driver
             driver = matchedDrivers.stream()
                     .filter(driverDescriptor -> driverDescriptor.getName().equalsIgnoreCase(driverInfo.getName()))
                     .findFirst()
-                    .orElse(matchedDrivers.get(0));
+                    .orElse(matchedDrivers.getFirst());
             connectionInfo.setDriver(driver);
         }
 
@@ -172,14 +179,6 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
             UIUtils.showMessageBox(getShell(), ImportConfigMessages.config_import_wizard_extract_url_parameters, e.getMessage(), SWT.ICON_WARNING);
         }
         final DBPDataSourceRegistry dataSourceRegistry = NavigatorUtils.getSelectedProject().getDataSourceRegistry();
-
-        String name = connectionInfo.getAlias();
-        for (int i = 0; ; i++) {
-            if (dataSourceRegistry.findDataSourceByName(name) == null) {
-                break;
-            }
-            name = connectionInfo.getAlias() + " " + (i + 1);
-        }
 
         DBPConnectionConfiguration config = new DBPConnectionConfiguration();
         config.setProperties(connectionInfo.getProperties());
@@ -207,7 +206,7 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
             connectionInfo.getDriver(),
             config
         );
-        dataSource.setName(name);
+        dataSource.setName(DataSourceUtils.generateUniqueDataSourceName(dataSourceRegistry, connectionInfo.getAlias(), 2));
         dataSource.setSavePassword(!CommonUtils.isEmpty(config.getUserPassword()));
         dataSource.setFolder(importData.getDataSourceFolder());
         try {
@@ -219,7 +218,7 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
 
     protected void adaptConnectionUrl(ImportConnectionInfo connectionInfo) throws DBException
     {
-        
+
         //connectionInfo.getDriver()
         String url = connectionInfo.getUrl();
         if (url == null) {
@@ -238,41 +237,144 @@ public abstract class ConfigImportWizard extends Wizard implements IImportWizard
             connectionInfo.setUrl(url);
             return;
         }
-        
+
         try {
             parseUrlAsDriverSampleUrl(connectionInfo);
-            return;
         } catch (Exception e) {
             log.error(e.getMessage(), e);
+            /*
+             * URL is not null and does not agree with sampleURL from driver.
+             * Still we proceed to import because it can be any other valid url format for the driver.
+             */
+            log.info("Import url as is it for url:" + url);
         }
-        
-        /*
-         * Here parsing was not successful.
-         * URL is not null and not agree with sampleURL from drive. 
-         * Still we proceed to import cause can be any other valid url format for the driver.
-         */
-        log.info("Import url as is it for url:" + url);
-        
+
+        // Extract URL query parameters as provider properties. Non-standard datasource pages
+        // (e.g. Snowflake warehouse/schema/role) keep their parameters in the query string and
+        // are lost otherwise because the sample URL pattern does not capture them.
+        extractUrlQueryParams(connectionInfo);
     }
 
     /**
-     * Try to parse url by driver sample url. 
+     * Try to parse url by driver sample url.
      * NOTE sampleURL is not the only possible way to define a valid url.
      *
-     * @throws DBException in case url does not reflect the sample one from driver.
      */
-    private void parseUrlAsDriverSampleUrl(ImportConnectionInfo connectionInfo) throws DBException {
+    private void parseUrlAsDriverSampleUrl(ImportConnectionInfo connectionInfo) {
         String url = connectionInfo.getUrl();
-        
+
         String sampleURL = connectionInfo.getDriverInfo().getSampleURL();
         if (connectionInfo.getDriver() != null) {
             sampleURL = connectionInfo.getDriver().getSampleURL();
         }
-        Matcher matcher = DatabaseURL.getPattern(sampleURL).matcher(url);
-        if (matcher.matches()) {
-            connectionInfo.setHost(matcher.group("host"));
-            connectionInfo.setPort(matcher.group("port"));
-            connectionInfo.setDatabase(matcher.group("database"));
+        boolean matched = tryMatchSampleUrl(connectionInfo, url, sampleURL);
+        parseStandardJdbcUrl(connectionInfo, url);
+        if (!matched) {
+            log.debug("Sample URL pattern did not match '" + url + "', used generic JDBC URL parsing");
+        }
+    }
+
+    private boolean tryMatchSampleUrl(@NotNull ImportConnectionInfo connectionInfo, @NotNull String url, @NotNull String sampleURL) {
+        Pattern pattern = DatabaseURL.getPattern(sampleURL);
+        Matcher matcher = pattern.matcher(url);
+        if (!matcher.matches()) {
+            int queryStart = url.indexOf('?');
+            if (queryStart <= 0) {
+                return false;
+            }
+            matcher = pattern.matcher(url.substring(0, queryStart));
+            if (!matcher.matches()) {
+                return false;
+            }
+        }
+        String host = safeGroup(matcher, "host");
+        if (!CommonUtils.isEmpty(host)) {
+            connectionInfo.setHost(host);
+        }
+        String port = safeGroup(matcher, "port");
+        if (!CommonUtils.isEmpty(port)) {
+            connectionInfo.setPort(port);
+        }
+        String database = safeGroup(matcher, "database");
+        if (!CommonUtils.isEmpty(database)) {
+            connectionInfo.setDatabase(database);
+        }
+        return true;
+    }
+
+    /**
+     * Fallback parse for any standard-shape JDBC URL (jdbc:scheme://host[:port][/path][?query]).
+     * Only fills fields that were not set by the sample URL pattern match.
+     */
+    private void parseStandardJdbcUrl(@NotNull ImportConnectionInfo connectionInfo, @NotNull String url) {
+        String jdbcPrefix = "jdbc:";
+        if (!url.startsWith(jdbcPrefix)) {
+            return;
+        }
+        try {
+            URI uri = URI.create(url.substring(jdbcPrefix.length()));
+            String host = uri.getHost();
+            if (!CommonUtils.isEmpty(host) && CommonUtils.isEmpty(connectionInfo.getHost())) {
+                connectionInfo.setHost(host);
+            }
+            int port = uri.getPort();
+            if (port > 0 && CommonUtils.isEmpty(connectionInfo.getPort())) {
+                connectionInfo.setPort(String.valueOf(port));
+            }
+            String path = uri.getPath();
+            if (!CommonUtils.isEmpty(path) && path.length() > 1 && CommonUtils.isEmpty(connectionInfo.getDatabase())) {
+                connectionInfo.setDatabase(path.substring(1));
+            }
+        } catch (Exception e) {
+            log.debug("Could not parse connection URL as standard JDBC URL: " + e.getMessage());
+        }
+    }
+
+    @Nullable
+    private static String safeGroup(@NotNull Matcher matcher, @NotNull String groupName) {
+        try {
+            return matcher.group(groupName);
+        } catch (IllegalArgumentException e) {
+            // Named group not present in the sample URL pattern.
+            return null;
+        }
+    }
+
+    /**
+     * Extract query string key=value pairs from the connection URL and store them as
+     * provider properties on the connection info. This makes non-standard driver
+     * parameters (e.g. Snowflake warehouse/schema/role) available when the connection is
+     * later used to rebuild the URL or shown in the driver's connection page.
+     */
+    protected void extractUrlQueryParams(@NotNull ImportConnectionInfo connectionInfo) {
+        String url = connectionInfo.getUrl();
+        if (CommonUtils.isEmpty(url)) {
+            return;
+        }
+        int queryStart = url.indexOf('?');
+        if (queryStart < 0 || queryStart == url.length() - 1) {
+            return;
+        }
+        String query = url.substring(queryStart + 1);
+        for (String param : query.split("&")) {
+            int eqIdx = param.indexOf('=');
+            if (eqIdx <= 0) {
+                continue;
+            }
+            String key = param.substring(0, eqIdx).trim();
+            String value = param.substring(eqIdx + 1).trim();
+            if (key.isEmpty()) {
+                continue;
+            }
+            if ("db".equalsIgnoreCase(key) || "database".equalsIgnoreCase(key)) {
+                if (CommonUtils.isEmpty(connectionInfo.getDatabase())) {
+                    connectionInfo.setDatabase(value);
+                }
+                continue;
+            }
+            if (!connectionInfo.getProviderProperties().containsKey(key)) {
+                connectionInfo.setProviderProperty(key, value);
+            }
         }
     }
 }
